# bug-example

./: .gitignore  Cargo.toml  memory.x  openocd.gdb  rust-toolchain  test.gdb
.cargo/: config
src/: main.rs
